--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,10 +1,11 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @movie %>
+<div style="text-align: center;">
+  <%= render @movie %>
 
-<div>
-  <%= link_to "Edit this movie", edit_movie_path(@movie) %> |
-  <%= link_to "Back to movies", movies_path %>
-
-  <%= button_to "Destroy this movie", @movie, method: :delete %>
+  <div style="margin: 20px 0;"> <!-- Added margin for spacing -->
+    <%= link_to "Edit this movie", edit_movie_path(@movie), class: "btn btn-secondary" %> |
+    <%= link_to "Back to movies", movies_path, class: "btn btn-primary" %> |
+    <%= button_to "Destroy this movie", @movie, method: :delete, class: "btn btn-danger" %>
+  </div>
 </div>
