--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -17,15 +17,15 @@
     <table>
       <thead>
         <tr>
-          <th>
+          <th class="<%= highlight_sort_column('title') %>">
             <%= link_to "Title", movies_path(sort: "title", direction: sort_direction("title")) %>
             <span><%= sort_direction("title") == "asc" ? "▲" : "▼" %></span>
           </th>
-          <th>
+          <th class="<%= highlight_sort_column('rating') %>">
             <%= link_to "Rating", movies_path(sort: "rating", direction: sort_direction("rating")) %>
             <span><%= sort_direction("rating") == "asc" ? "▲" : "▼" %></span>
           </th>
-          <th>
+          <th class="<%= highlight_sort_column('release_date') %>">
             <%= link_to "Release Date", movies_path(sort: "release_date", direction: sort_direction("release_date")) %>
             <span><%= sort_direction("release_date") == "asc" ? "▲" : "▼" %></span>
           </th>
